fix flashing so that the layouts dont break on mobile

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ section#options > * {
 
 #flash {
     flex: 1;
-    visibility: hidden;
+    display:none;
     margin: 0 auto;
     display: block;
     text-align: center;
